tests/neg/i7810.scala
val a = implicitly[ValueOf[_]] // error
